WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
47494
Incorrect handling of 0 length logs in GraphicsContext3DOpenGL.cpp
https://bugs.webkit.org/show_bug.cgi?id=47494
Summary
Incorrect handling of 0 length logs in GraphicsContext3DOpenGL.cpp
Oliver Hunt
Reported
2010-10-11 10:17:13 PDT
Incorrect handling of 0 length logs in GraphicsContext3DOpenGL.cpp
Attachments
Patch
(2.96 KB, patch)
2010-10-11 10:23 PDT
,
Oliver Hunt
kling
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Oliver Hunt
Comment 1
2010-10-11 10:23:26 PDT
Created
attachment 70446
[details]
Patch
Andreas Kling
Comment 2
2010-10-11 10:43:15 PDT
Comment on
attachment 70446
[details]
Patch LGTM.
WebKit Review Bot
Comment 3
2010-10-11 11:58:36 PDT
http://trac.webkit.org/changeset/69506
might have broken GTK Linux 32-bit Release
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug